name:                ComputingSystem-Haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/stesta/ComputingSystem-Haskell#readme
license:             MIT
license-file:        LICENSE
author:              Steven Testa
maintainer:          steve@testasoftware.com
copyright:           2017 Testa Software
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ElementaryGates, ALU
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ComputingSystem-Haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ComputingSystem-Haskell
  default-language:    Haskell2010

test-suite ComputingSystem-Haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , ComputingSystem-Haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ComputingSystem-Haskell
